navbar falls behind content when scrolling, fixed.
 z-index: 6; on nav bar

--- a/css/first-page.css
+++ b/css/first-page.css
@@ -280,6 +280,7 @@ input[type=checkbox]:checked ~ #overlay-button span:after {
         position: fixed;
         background: rgba(0, 0, 0, 0.65);
         width: 100%;
+        z-index: 6;
     }
     
     .desktop-nav ul {
